feature: プロフィール関連の実装に追加、食事の回数の変更
